Your commit message here

--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,1 @@
-"<html><body><h1>besok hari mingguddddddddd</h1></body></html>" 
+"<html><body><h1>besok hari mingddguddddddddd</h1></body></html>" 
