Your commit message here

--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,1 @@
-ss"<html><body><h1>beddsdsok hari mingddgudddddddsssdddddsss</h1></body></html>" 
+"<html><body><h1>beddsdsodk hari mingddgudddddddsssdddddsss</h1></body></html>" 
